<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="loading">Loading...</string>
  <string name="app_name">Emacs Documentation</string>
  <string name="icon_name">Emacs Docs</string>
  <string name="action_settings">Settings</string>
  <string name="search_title">Search for a symbol name.</string>
  <string name="title_all">All</string>
  <string name="title_functions">Functions</string>
  <string name="title_variables">Variables</string>
  <string name="title_random">Random</string>
  <string name="title_about">About</string>
  <string name="empty_list">No results</string>
  <string name="send_feedback">Feedback</string>
  <string name="search_hint">Search Term</string>
  <string name="dark_theme">Use Dark Theme</string>
  <string name="dark_theme_summ_yes">Currently using dark theme.\n(Requires Restart)</string>
  <string name="dark_theme_summ_no">Currently using light theme.\n(Requires Restart)</string>
  <string name="pref_share_cat_title">Share Menu</string>
  <string name="share_speed_mode">GO on Exact Match</string>
  <string name="share_speed_mode_summ_yes">If shared string matches a name exactly, go straight to documentation. Only applies when coming from the share menu</string>
  <string name="share_speed_mode_summ_no">Offer list of matches even if match is exact. Only applies when coming from the share menu.</string>
  <string name="feedback_email_body">As you can see, I\'ve included some system information. If you don\'t like it feel free to delete it.\n\nAll feedback welcome!</string>
  <string name="feedback_email_subject">Feedback - Emacs Documentation Android</string>
  <string name="about_content">
    <a href="http://doc.endlessparentheses.com/">Emacs Documentation</a>
    v1.3\nby Artur Malabarba\n\n
    If you like my work, buy the\n
    <a href="market://details?id=com.malabarba.emacsdocumentation">Donate Version</a>\n\n
    or\n
    <a href="https://www.paypal.com/cgi-bin/webscr\?cmd=_s-xclick&amp;hosted_button_id=GLZLRLW72Q8G2">donate through Paypal</a>
  </string>
  <string name="cant_create_database">I couldn\'t create the database.\nIs your storage full?</string>
  <string name="function">Function</string>
  <string name="variable">Variable</string>
  <string name="symbol_is_both"> is both a Function and a Variable.
  \nWhich one did you want?</string>
  <string name="close_page">Close Page</string>
  <string name="share_text">Share Text</string>
  <string name="share_url">Share URL</string>
  <string name="doc_page_title">DOC</string>
  
  <string name="zoom_in">In</string>
  <string name="zoom_out">Out</string>
</resources>
